# mxdev-uv-pyproject-updater

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/mxdev_uv_pyproject_updater/: __init__.py  hook.py
tests/: test_hook.py
