[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mxdev-uv-pyproject-updater"
version = "0.1.0"
description = "An mxdev hook to update pyproject.toml for uv workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPLv2" }
authors = [{ name = "Mikel Larreategi", email = "mlarreategi@codesyntax.com" }]
keywords = ["mxdev", "uv", "pyproject", "toml", "packaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = ["mxdev>=3.0.0", "tomlkit>=0.12.0"]

[project.urls]
Homepage = "https://github.com/erral/mxdev-uv-pyproject-updater"
Repository = "https://github.com/erral/mxdev-uv-pyproject-updater.git"
"Bug Tracker" = "https://github.com/erral/mxdev-uv-pyproject-updater/issues"

[project.entry-points.mxdev]
hook = "mxdev_uv_pyproject_updater.hook:UvPyprojectUpdater"
